@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.439 2005/12/08 22:23:31 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.440 2005/12/08 22:24:25 wolf31o2 Exp $
+
+  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/chroot-functions.sh:
+  Fixes 'too many arguments' error in check_portage_version.
 
   08 Dec 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
